All the spacing errors have been fixed

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ h3 {
 }
 
 h1 {
-	width: 100%;
 	height: 8%;
 	background: #FB926D;
   padding-top: 0.5em;
@@ -29,7 +28,6 @@ h1 {
 }
 
 #map, #canvasDiv {
-	width: 100%;
 	height: 45%;
 }
 
